--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
         -ms-flex-align: center;
             align-items: center;
     border-radius: 10px;
-    margin: 0 0 10px 0;
+    margin: 0 0 15px 0;
     position: relative;
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
@@ -82,7 +82,7 @@ body {
     width: 50%;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 25px 25px; 
 }
 .button__block.style-2 .text {
     padding: 5px 0 0;
@@ -90,7 +90,7 @@ body {
 
 .fa-window-maximize, .fa-calculator, .fa-phone, .fa-envelope, .fa-location-dot {
     color: #333;
-    font-size: 20px;
+    font-size: 35px;
     left: 10px;
     position: absolute;
 }
